--- a/dasarPemrogramanWeb/tugas-akhir/package.json
+++ b/dasarPemrogramanWeb/tugas-akhir/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "sass sass/main.scss assets/css/style.css --no-source-map", 
-    "watch:sass" : "sass sass/main.scss assets/css/style.css --no-source-map -w"
+    "compile:sass": "sass assets/sass/main.scss assets/css/style.css --no-source-map", 
+    "watch:sass" : "sass assets/sass/main.scss assets/css/style.css --no-source-map -w"
   },
   "keywords": [],
   "author": "Hadi Rizaldi R",
